tests/profile/fail/class_variable_get_fail.ignore
class A
  def A.f() @@x = 3 end
  def A.g() class_variable_get("@@x") end
end

A.f
x = A.g
if false
  x.foo
end
